--- a/courses/enn190/enn190.html
+++ b/courses/enn190/enn190.html
@@ -5,9 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
-        <link rel="stylesheet" href="/all.css">
-        <link rel="stylesheet" href="/courses/courses.css">
-        <link rel="stylesheet" href="/courses/enn190/enn190.css">
+        <link rel="stylesheet" href="all.css">
+        <link rel="stylesheet" href="courses/courses.css">
+        <link rel="stylesheet" href="courses/enn190/enn190.css">
         
 
     </head>
@@ -23,8 +23,8 @@
             </div>
         </div>
     </body>
-    <script src="/all.js">
+    <script src="all.js">
     </script>
-    <script src="/courses/enn190/enn190.js"></script>
+    <script src="courses/enn190/enn190.js"></script>
     </html>
     
