--- a/courses/tif083/tif083.html
+++ b/courses/tif083/tif083.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/all.css">
-    <link rel="stylesheet" href="/courses/courses.css">
-    <link rel="stylesheet" href="/courses/tif083/tif083.css">
+    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="courses/courses.css">
+    <link rel="stylesheet" href="courses/tif083/tif083.css">
     
 
 </head>
@@ -23,7 +23,7 @@
         </div>
     </div>
 </body>
-<script src="/all.js">
+<script src="all.js">
 </script>
-<script src="/courses/tif083/tif083.js"></script>
+<script src="courses/tif083/tif083.js"></script>
 </html>
