--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.css">
-    <link rel="stylesheet" href="/all.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="all.css">
 
     <title>Darkftek</title>
 </head>
@@ -17,8 +17,8 @@
         </div>
     </div>
 </body>
-<script src="/index.js">
+<script src="index.js">
 </script>
-<script src="/all.js">
+<script src="all.js">
 </script>
 </html>
