--- a/courses/tif083/tif083.html
+++ b/courses/tif083/tif083.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-      function getBaseUrl() {
-        const onGithub = window.location.hostname.includes('github.io');
-        return onGithub ? '/darkfteksimpel/' : '/';
-      }
-      const baseUrl = getBaseUrl();
-    </script>
+        <!-- Links will be set via JavaScript below -->
+    <link id="cssAll" rel="stylesheet">
+    <link id="cssCourses" rel="stylesheet">
+    <link id="cssTif083" rel="stylesheet">
+    
 </head>
 <body>
     <div class="main">
@@ -21,10 +19,13 @@
             </div>
         </div>
     </div>
-    <!-- Links will be set via JavaScript below -->
-    <link id="cssAll" rel="stylesheet" href="">
-    <link id="cssCourses" rel="stylesheet" href="">
-    <link id="cssTif083" rel="stylesheet" href="">
+    <script>
+        function getBaseUrl() {
+          const onGithub = window.location.hostname.includes('github.io');
+          return onGithub ? '/darkfteksimpel/' : '/';
+        }
+        const baseUrl = getBaseUrl();
+    </script>
     <script>
       // Once the DOM is fully loaded, set the correct paths for CSS and dynamically inject scripts
       document.addEventListener('DOMContentLoaded', function () {
